# anonymPDF

./: .coverage  .gitignore  01_konceptas.md  01_log_errors.txt  01_test.py  02_log_error.txt  03_failed_log.txt  04_fail_log.txt  05_fail_log.txt  06_fail.txt  07_fail.txt  08_fail.txt  09_fail.txt  2025-06-12_debug_session.md  2025-06-13_debug_session.md  55_log.txt  56_log.txt  57_log.txt  58_log.txt  59_log.txt  60_log.txt  61_log.txt  62_log.txt  63_log.txt  64_log.txt  65_log.txt  66_log.txt  67_log.txt  API.md  AnonymPDF-Setup.iss  AnonymPDF.spec  CHANGELOG.md  CLEANUP_RECOMMENDATIONS.md  DAY_PLAN.md  Enhanced_analytics.txt  FINAL_ATTACK_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  PII_IMPROVEMENTS_SUMMARY.md  README.md  (+31 more)
app/: __init__.py  database.py  dependencies.py  main.py  pdf_processor.py  worker.py
config/: analytics_config.yaml  brand_names.yaml  cities.yaml  ml_config.yaml  multilang_config.yaml  patterns.yaml  performance_config.yaml  processing_rules.yaml  settings.yaml
data/: ab_tests.db  analytics.db  monitoring.db  real_time_monitor.db  user_feedback.db
docs/: DOCUMENT_MANAGEMENT_STRATEGY.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
models/: confidence_calibrator_v20250603_153643.joblib  confidence_calibrator_v20250603_153643_metadata.json  confidence_calibrator_v20250603_154304.joblib  confidence_calibrator_v20250603_154304_metadata.json  confidence_calibrator_v20250603_154307.joblib  confidence_calibrator_v20250603_154307_metadata.json  confidence_scaler_v20250603_153643.joblib  confidence_scaler_v20250603_153643_metadata.json  confidence_scaler_v20250603_154304.joblib  confidence_scaler_v20250603_154304_metadata.json  confidence_scaler_v20250603_154307.joblib  confidence_scaler_v20250603_154307_metadata.json  confidence_scorer_v20250603_153643.joblib  confidence_scorer_v20250603_153643_metadata.json  confidence_scorer_v20250603_154304.joblib  confidence_scorer_v20250603_154304_metadata.json  confidence_scorer_v20250603_154307.joblib  confidence_scorer_v20250603_154307_metadata.json
scripts/: create_lithuanian_test_asset.py  create_test_asset.py  maintenance.py  organize_docs.py
tests/: conftest.py  test_analytics_api.py  (+29 more)
(+85 files in other folders)
